# neural_net

./: CMakeLists.txt  README.md
src/brh/neural_net/: activation_functions.h  common.h  layered.cpp  layered.h  main.cpp
src/brh/neural_net/constant/: hidden_group.h  network.h  node.h
src/brh/neural_net/dynamic/: network.h  node.h
src/brh/neural_net/net_layout/: net_layout.h
